RESOLVED FIXED139801
[Win] Endless compiler warnings created by DFGEdge.h
https://bugs.webkit.org/show_bug.cgi?id=139801
Summary [Win] Endless compiler warnings created by DFGEdge.h
Brent Fulgham
Reported 2014-12-18 16:49:19 PST
Recent changes have introduced tons of compiler warnings: 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGCSEPhase.cpp) 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGClobberize.cpp) 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGClobberSet.cpp) 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGCommon.cpp) 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGCommonData.cpp) 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGCriticalEdgeBreakingPhase.cpp) 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGConstantFoldingPhase.cpp) 10>c:\projects\webkit\opensource\source\javascriptcore\dfg\DFGEdge.h(210): warning C4805: '|' : unsafe mix of type 'uintptr_t' and type 'bool' in operation (..\dfg\DFGDCEPhase.cpp)
Attachments
the patch. (1.38 KB, patch)
2014-12-19 11:04 PST, Mark Lam
no flags
Brent Fulgham
Comment 1 2014-12-18 16:50:14 PST
Also: 10>..\runtime\BasicBlockLocation.cpp(55): warning C4245: 'initializing' : conversion from 'int' to 'unsigned int', signed/unsigned mismatch
Brent Fulgham
Comment 2 2014-12-18 16:50:41 PST
Note: Many of these warnings are being generated by 32-bit builds.
Mark Lam
Comment 3 2014-12-19 11:04:07 PST
Created attachment 243558 [details] the patch.
Brent Fulgham
Comment 4 2014-12-19 11:06:02 PST
Comment on attachment 243558 [details] the patch. Looks good to me! r=me.
WebKit Commit Bot
Comment 5 2014-12-19 11:26:41 PST
Comment on attachment 243558 [details] the patch. Clearing flags on attachment: 243558 Committed r177582: <http://trac.webkit.org/changeset/177582>
WebKit Commit Bot
Comment 6 2014-12-19 11:26:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.