[Win] Endless compiler warnings created by DFGEdge.h. <https://webkit.org/b/139801>

Reviewed by Brent Fulgham.

Add a cast to fix the type just the way the 64-bit version does.

* dfg/DFGEdge.h:
(JSC::DFG::Edge::makeWord):


Canonical link: https://commits.webkit.org/157746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177582 268f45cc-cd09-0410-ab3c-d52691b4dbfc